--- a/Analytics.asmdef
+++ b/Analytics.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "UniRx",
         "UniTask",
-        "AppMetrica"
+        "AppMetrica",
+        "GameAnalyticsInfo"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
